Fix <pre>-caused horizontal scroll on mobile

--- a/app/assets/stylesheets/thredded/components/_post.scss
+++ b/app/assets/stylesheets/thredded/components/_post.scss
@@ -95,6 +95,9 @@
   blockquote {
     @extend %thredded--blockquote;
   }
+  pre {
+    overflow-x: auto;
+  }
 
   &--spoiler {
     color: $thredded-spoiler-hidden-color;
